src/test/ui/borrowck/borrowck-for-loop-correct-cmt-for-pattern.stderr
error[E0507]: cannot move out of a shared reference
  --> $DIR/borrowck-for-loop-correct-cmt-for-pattern.rs:12:15
   |
LL |     for &a in x.iter() {
   |         --    ^^^^^^^^
   |         ||
   |         |data moved here
   |         |move occurs because `a` has type `&mut i32`, which does not implement the `Copy` trait
   |         help: consider removing the `&`: `a`

error[E0507]: cannot move out of a shared reference
  --> $DIR/borrowck-for-loop-correct-cmt-for-pattern.rs:18:15
   |
LL |     for &a in &f.a {
   |         --    ^^^^
   |         ||
   |         |data moved here
   |         |move occurs because `a` has type `std::boxed::Box<isize>`, which does not implement the `Copy` trait
   |         help: consider removing the `&`: `a`

error[E0507]: cannot move out of a shared reference
  --> $DIR/borrowck-for-loop-correct-cmt-for-pattern.rs:22:15
   |
LL |     for &a in x.iter() {
   |         --    ^^^^^^^^
   |         ||
   |         |data moved here
   |         |move occurs because `a` has type `std::boxed::Box<i32>`, which does not implement the `Copy` trait
   |         help: consider removing the `&`: `a`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0507`.
